--- a/app/src/main/res/layout/article_layout.xml
+++ b/app/src/main/res/layout/article_layout.xml
@@ -71,29 +71,24 @@
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1.7"
-                    android:orientation="vertical">
-
-                    <ImageView
-                        android:id="@+id/imageView"
-                        android:layout_width="60dp"
-                        android:layout_height="60dp"
-                        android:layout_marginLeft="16dp"
-                        android:layout_weight="1"
-                        android:visibility="gone"
-                        android:padding="7dp"
-                        android:src="@drawable/round_account_circle_black_24"
-                        android:textColor="@color/colorPrimary2" />
-                </LinearLayout>
+                <ImageView
+                    android:layout_gravity="center"
+                    android:id="@+id/imageView"
+                    android:layout_width="60dp"
+                    android:layout_height="60dp"
+                    android:layout_marginStart="16dp"
+                    android:layout_weight=".01"
+                    android:visibility="visible"
+                    android:contentDescription="@string/user_image_description"
+                    android:padding="7dp"
+                    android:src="@drawable/round_account_circle_black_24"
+                    android:textColor="@color/colorPrimary2" />
 
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_weight="1"
+                    android:layout_weight=".5"
                     android:gravity="center_vertical|start"
 
                     android:orientation="vertical">
@@ -110,28 +105,10 @@
                         android:id="@+id/tvArticlePublishTime"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="5dp"
+                        android:layout_marginStart="5dp"
                         android:text="@string/emptyString"
                         android:textColor="@color/colorPrimary" />
 
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1.5"
-                    android:gravity="center"
-                    android:orientation="vertical">
-
-                    <TextView
-                        android:id="@+id/tvCommentsCount"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:drawableLeft="@drawable/outline_comment_black_24"
-                        android:text="@string/emptyString"
-                        android:visibility="gone"
-                        android:textColor="@color/black"
-                        android:textSize="15sp" />
                 </LinearLayout>
 
             </LinearLayout>
